--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,8 @@ jobs:
         - '3.13'
         include:
         - os: ubuntu-22.04
-          python-version: '3.9' # 3.9.0 is not available on this image
-          pip-args: --constraint constraints/minimal_dependencies.txt
+          python-version: 3.9.0
+          install-args: --resolution=lowest-direct
         - os: windows-latest
           python-version: 3.9.0
         - os: macos-13
@@ -36,18 +36,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-    - name: Setup Python
-      uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
+    - uses: astral-sh/setup-uv@f0ec1fc3b38f5e7cd731bb6ce540c5af426746bb # v6.1.0
       with:
         python-version: ${{ matrix.python-version }}
+        prune-cache: false
 
     - name: Build
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install . ${{ matrix.pip-args }}
-        python -m pip install --requirement requirements/tests.txt
+        uv sync --no-editable --group test ${{ matrix.install-args }}
 
     - name: Run pytest
       run: |
-        python -m pip freeze
-        pytest --color=yes
+        uv run --no-sync pytest --color=yes -ra
