--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,10 +13,10 @@ repos:
   - id: end-of-file-fixer
   - id: check-toml
 
-# - repo: https://github.com/astral-sh/uv-pre-commit
-#   rev: 0.7.6
-#   hooks:
-#   - id: uv-lock
+- repo: https://github.com/astral-sh/uv-pre-commit
+  rev: 0.7.6
+  hooks:
+  - id: uv-lock
 
 - repo: https://github.com/codespell-project/codespell
   rev: v2.4.1
