--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,10 +33,6 @@ text = "GPL-3.0"
 [project.urls]
 Homepage = "https://github.com/volodia99/cblind"
 
-[project.optional-dependencies]
-dev = [
-    "pytest>=6.1",
-]
 
 [project.scripts]
 cblind = "cblind.cblind:cblind"
@@ -52,3 +48,8 @@ namespaces = false
 
 [tool.setuptools.dynamic]
 version = {attr = "cblind.__version__.__version__"}
+
+[dependency-groups]
+test = [
+    "pytest>=6.1.0",
+]
