--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "flit_core.buildapi"
 [project]
 name = "cblind"
 version = "2.3.1"
-description = "Color schemes for Python plots, from Paul Tol (2012)"
+description = "Colorblind friendly colormaps and color cycles for matplotlib"
 authors = [
     { name = "G. Wafflard-Fernandez" },
 ]
